[Menu] [Project list] - Update project list as menu submodule.

--- a/client/js/app/main/modules/menu/projectList/projectItem.template.html
+++ b/client/js/app/main/modules/menu/projectList/projectItem.template.html
@@ -1,4 +1,4 @@
-<a ui-sref="main.project({ projectId:{{project.id}})" class="list-item project-item color_{{project.color}}">
+<a ui-sref="main.project({ projectId:project._id})" class="list-item project-item color_{{project.color}}">
     <span class="project-item__title"> {{project.name}}</span>
 
     <div class="project-item__count">
